overlays/prod/network-policy-patch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-network-policy
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: nginx
